k8s/clusters/lab/apps/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.8.10
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
