k8s/clusters/lab/apps/homeassistant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.jax-lab.dev`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
  tls:
    certResolver: letsencrypt
